# huigongyun

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  README.md  SAMPLE_COMPARISON_REPORT.md  TESTS_GUIDELINES.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  任务拆解.md  任务需求.md  工作流确认.md  系统架构设计文档.md  解析与检索接口约定.md  设计提案.md  项目核心文档.md
.claude/: settings.json
.claude/agents/: algorithm.agent.md  code_guardian.agent.md  etl_ingestion.agent.md  orchestrator.agent.md  release_docs.agent.md  research.agent.md  web_ui.agent.md
.claude/memory/: pdf-processing-strategy.md  project-priorities.md
.github/: AGENTS.md
.github/agents/: algorithm.agent.md  code_guardian.agent.md  release_docs.agent.md  research.agent.md
.github/workflows/: ci.yml
agents/: Agent_BOM_Generator.md  Agent_Data_Extractor.md  Agent_Human_Collaborator.md  Agent_Quality_Validator.md
docs/: OCR_PoC.md  初赛创意提案.md
examples/: 样例数据说明.md
huigongyun/: pipeline.py  tasks.py
huigongyun/generation/: __init__.py  rules.py
huigongyun/parsing/: base.py  pdf.py
huigongyun/retrieval/: __init__.py  faiss_index.py  indexer.py  matcher.py
huigongyun/validation/: __init__.py  cross_source.py  default.py
scripts/: check_worker_nonroot.sh  demo.py  demo_retrieval.py  demo_version_diff.py  ocr_poc.py  run_integration_pg.sh  sample_compare.py  validate_dwg.py
src/: __main__.py  cli.py  models.py  webapp.py
src/adapters/: hh_adapter.py
src/comparison/: __init__.py  differ.py  models.py
src/export/: spreadsheet.py
src/generation/: excel_bom.py  multi_extractor.py
src/huigongyun/: __init__.py  bootstrap.py  cli.py  config.py  exceptions.py  interfaces.py  models.py  (+3 more)
src/huigongyun.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_bom_generation.py  test_cabinet_indexing.py  test_excel_parser.py  test_normalization.py  test_smoke.py  test_source_formats.py  test_validation_export.py  test_webapp.py
(+101 files in other folders)
