[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huigongyun"
version = "0.1.0"
description = "Low-voltage electrical enclosure intelligent quotation MVP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Copilot"}]
dependencies = ["Flask>=3.0.0","tenacity>=8.2.2"]

[project.scripts]
huigongyun = "huigongyun.cli:main"
huigongyun-web = "huigongyun.webapp:main"

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.6.0", "mypy>=1.11.0"]
web = ["Flask>=3.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120

