[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huigongyun"
version = "0.1.0"
description = "Low-voltage electrical enclosure intelligent quotation MVP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "Copilot"}]
dependencies = [
    "Flask>=3.0.0",
    "openpyxl>=3.1.5",
    "rapidfuzz>=3.9.0",
    "tenacity>=8.2.2",
    "celery>=5.2.7",
    "redis>=4.5.0",
    "minio>=7.1.1",
    "psycopg2-binary>=2.9.7",
]

[project.scripts]
huigongyun = "src.cli:main"
huigongyun-web = "src.webapp:main"

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "ruff>=0.6.0", "mypy>=1.11.0"]
web = ["Flask>=3.0.0"]
ocr = ["pytesseract", "pdf2image", "Pillow"]
vision-llm = ["openai", "anthropic", "google-generativeai"]
marker = ["marker-pdf"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "scripts*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120

